Added card + styel, JSON array

--- a/index.html
+++ b/index.html
@@ -25,7 +25,41 @@
     <!-- js -->
     <script src="js/script.js"></script>
   </head>
-  <body>
-    <h1>QuizApp</h1>
+  <body onload="init()">
+    <!-- As a heading -->
+    <nav class="navbar bg-body-tertiary">
+      <div class="container-fluid">
+        <span class="navbar-brand mb-0 h1">QuizApp</span>
+      </div>
+    </nav>
+
+    <main>
+      <!-- card -->
+      <div class="card p-3" style="width: 30rem">
+        <!-- <img src="..." class="card-img-top" alt="..."> -->
+        <div class="card-body">
+          <h5 class="card-title">Frage</h5>
+        </div>
+
+        <div class="card mb-2">
+          <div class="card-body">Answer 1</div>
+        </div>
+        <div class="card mb-2">
+          <div class="card-body">Answer 2</div>
+        </div>
+        <div class="card mb-2">
+          <div class="card-body">Answer 3</div>
+        </div>
+        <div class="card mb-2">
+          <div class="card-body">Answer 4</div>
+        </div>
+
+        <div class="question-footer">
+          <span><b>1</b> von <b id="all-questions">10</b> Fragen</span>
+
+          <button class="btn btn-primary">Nächste Frage</button>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
