--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- js -->
     <script src="js/script.js"></script>
   </head>
-  <body onload="init()">
+  <body onload="renderCard()">
     <!-- As a heading -->
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid">
@@ -38,26 +38,28 @@
       <div class="card p-3" style="width: 30rem">
         <!-- <img src="..." class="card-img-top" alt="..."> -->
         <div class="card-body">
-          <h5 class="card-title">Frage</h5>
+          <h5 class="card-title" id="question-text">Frage</h5>
         </div>
 
         <div class="card mb-2">
-          <div class="card-body">Answer 1</div>
+          <div class="card-body quiz-answer-card" id="answer1" onclick="answer(1)">Antwort</div>
         </div>
         <div class="card mb-2">
-          <div class="card-body">Answer 2</div>
+          <div class="card-body quiz-answer-card" id="answer2" onclick="answer(2)">Antwort</div>
         </div>
         <div class="card mb-2">
-          <div class="card-body">Answer 3</div>
+          <div class="card-body quiz-answer-card" id="answer3" onclick="answer(3)">Antwort</div>
         </div>
         <div class="card mb-2">
-          <div class="card-body">Answer 4</div>
+          <div class="card-body quiz-answer-card" id="answer4" onclick="answer(4)">Antwort</div>
         </div>
 
         <div class="question-footer">
-          <span><b>1</b> von <b id="all-questions">10</b> Fragen</span>
+          <span><b id="current-question"></b> von <b id="all-questions"></b> Fragen</span>
 
-          <button class="btn btn-primary">Nächste Frage</button>
+          <button class="btn btn-primary" id="next-button" disabled onclick="nextQuestion()">
+            Nächste Frage
+          </button>
         </div>
       </div>
     </main>
